[project]
name = "cameractrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==1.13.1",
    "torchaudio==0.13.1",
    "torchvision==0.14.1",
    "numpy==1.26.4",
    "diffusers==0.24.0",
    "transformers==4.36.0",
    "xformers==0.0.16",
    "imageio[ffmpeg]==2.27.0",
    "huggingface-hub==0.25",
    "accelerate==0.27.2",
    "triton>=3.6.0",
    "opencv-python>=4.11.0.86",
    "gdown>=5.2.1",
    "einops>=0.8.2",
    "decord>=0.6.0",
    "omegaconf>=2.3.0",
    "wandb>=0.24.1",
    "termcolor>=3.3.0",
]
